samples/_failures_safe/1761603312_6bbadc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_26ba7d8d.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_26ba7d8d.c:164:45: error: expected ‘;’ at end of input
  164 |         case TOKEN_EOF: printf("EOF"); break
      |                                             ^
      |                                             ;
./samples/SAFE/__tmp_26ba7d8d.c:164:9: error: expected declaration or statement at end of input
  164 |         case TOKEN_EOF: printf("EOF"); break
      |         ^~~~
./samples/SAFE/__tmp_26ba7d8d.c:164:9: error: expected declaration or statement at end of input
